--- a/index.html
+++ b/index.html
@@ -174,9 +174,7 @@
                             <div class="col-lg-6 col-md-6 mb-5 mb-lg-0">
                                 <div class="text-uppercase-expanded text-xs mb-4">OZ Pet Store</div>
                                 <ul class="list-unstyled mb-0">
-                                    <li class="mb-2"><i class="fa fa-home me-2"></i> Behind Ramat Guess House, Opp.
-                                        Federal Polytechnic BIDA School Fence.
-                                    </li>
+                                    <!--<li class="mb-2"><i class="fa fa-home me-2"></i> </li>-->
                                     <li class="mb-2"><i class="fa fa-envelope me-2"></i> ozpetstorenigeria@gmail.com
                                     </li>
                                     <li class="mb-2"><i class="fa fa-phone me-2"></i> <a href="tel:+2348076416952">+234
